# AI-report

./: .gitignore  pyproject.toml
ai_reports_databook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
assets/: databook_template.xlsx  template.xlsx
contracts/: cli.md  document-json.schema.json  extraction.schema.json  index-map.schema.json  template-map.schema.json
reference/ontology/: .gitkeep
reference/patterns/: .gitkeep
specs/001-annual-report-databook-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-annual-report-databook-agent/contracts/: cli.md  document-json.schema.json  extraction.schema.json  index-map.schema.json  template-map.schema.json
specs/002-statement-locator-hardening/: plan.md  spec.md  tasks.md
specs/003-full-databook/: plan.md  spec.md  tasks.md
src/: __init__.py  main.py
src/cli/: app.py
src/llm/: __init__.py  agent.py
src/models/: __init__.py  document.py  extraction.py  index_map.py  locator.py  phase3.py  template_map.py
src/pipeline/: __init__.py  index_build.py  pdf_type.py  reconstruct.py  run_context.py  template_analyzer.py
template_map/: knowledge_marine_v1.json  template_map.json
tests/: test_phase3_interpretations.py  test_phase3_inventory.py  test_phase3_notes_locator.py  test_phase3_workbook_writer.py  test_statement_locator_llm_invalid_fallback.py  test_statement_locator_llm_ranking_used.py  test_statement_locator_multitable_select.py  test_statement_locator_ocr_rows.py  test_statement_locator_toc_false_positive.py  test_statements_raw.py
(+22 files in other folders)
